	* Support most recent version of User Avatar. (XEP-0084 v1.1)
	* Updated Entity Capabilities support. (Tobias Markmann)
	* Better support for receiving remote users' nicknames.
	* /affiliate and /role will now list the room members with the specified
	  affiliation/role if possible. (Andrei Mozzhuhin)
	* Put section breaks between resources in "Get Info" to improve readability.
	* XHTML markup is only included in outgoing messages when the message
	  contains formatting.
	* Show when the user was last logged in when doing "Get Info" on an offline
	  buddy, provided the server supports it.
	* Support custom smileys in MUCs (only when all participants support the
	  "Bits of Binary" extension, and a maximum of 10 participants are in the
	  chat to avoid getting too many fetch requests).
	* Fix an issue with Jabber (pre-XMPP) servers and the user's preference
	  to require SSL not being respected.
	* When using non-Cyrus SASL DIGEST-MD5 authentication, only specify the
	  charset as UTF-8 if the username/password weren't converted to ISO-8859-1.

	Yahoo:
	* P2P file transfers.  (Sulabh Mahajan)
	* Sending text messages (address to +<countrycode><phone number>).
	  (Sulabh Mahajan)
	* Addition of MSN buddies to Yahoo accounts by adding them as
	  'msn/buddy@somedomain.com' is now supported.  (Sulabh Mahajan)
	* Yahoo Protocol 16 support, including new HTTPS login method; this should
	  fix a number of login problems that have recently cropped up.  (Sulabh
	  Mahajan, Mike "Maiku" Ruprecht)

	Pidgin:
	* Added -f command line option to tell Pidgin to ignore NetworkManager
	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.